fix: safari and chrome (mobile) scroll overflow

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,9 +5,11 @@
 html,
 body,
 #app {
-  height: 100vh;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
 }
 
 html.dark {
